--- a/admin/thongBao.html
+++ b/admin/thongBao.html
@@ -47,7 +47,6 @@
                 <!-- Top Bar Start -->
                 <div class="topbar" id="topBar">
 
-                    
                 </div>
                 <!-- Top Bar End -->
 
@@ -58,31 +57,21 @@
                             <div class="col-lg-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
-                                        <h4 class="mt-0 header-title">Danh mục</h4>
-                                        <a href="add-category.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm danh mục +</a>
+                                        <h4 class="mt-0 header-title">Thông báo</h4>
+                                        <a href="add-product.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm thông báo +</a>
                                         <div class="table-responsive">
                                             <table class="table mb-0">
                                                 <thead>
                                                     <tr>
                                                         <th>#</th>
-                                                        <th>Tên danh mục</th>
+                                                        <th>ID thông báo</th>
+                                                        <th>Ngày TB</th>
                                                         <th>Trạng thái</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody class="renderCategory" id="brand">
-                                                    <!-- <tr>
-                                                        <th>1</th>
-                                                        <td>Mark</td>
-                                                        <td>Otto</td>
-                                                        <td>@mdo</td>
-                                                        <td>@mdo</td>
-                                                        <td>@mdo</td>
-                                                        <td>
-                                                            <span class="btn btn-info">Sửa</span>
-                                                            <span class="btn btn-danger">Xóa</span>
-                                                        </td>
-                                                    </tr> -->
+                                                <tbody class="renderMember" id="tt">
+
                                                 </tbody>
                                             </table>
                                         </div>
@@ -134,9 +123,9 @@
     <!--Morris Chart-->
     <script src="assets/plugins/morris/morris.min.js"></script>
     <script src="assets/plugins/raphael/raphael-min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <!-- dashboard -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/pages/dashboard.js"></script>
 
     <!-- App js -->
@@ -144,7 +133,8 @@
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/javascript/brands.js"></script>
+    <script src="assets/js/product.js"></script>
+    <script src="assets/javascript/news.js"></script>
 
 
 </body>
