--- a/admin/add-dmtong.html
+++ b/admin/add-dmtong.html
@@ -26,6 +26,7 @@
     <div id="preloader">
         <div id="status">
             <div class="spinner"></div>
+            <div></div>
         </div>
     </div>
 
@@ -54,16 +55,15 @@
                         <div class="col-lg-12">
                             <div class="card m-b-30">
                                 <div class="card-body">
-
-                                    <h4 class="mt-0 header-title">Thêm sản phẩm</h4>
+                                    <h4 class="mt-0 header-title">Danh mục tổng</h4>
                                     <div class="form">
                                         <div class="form-group">
-                                            <label>Tên sản phẩm</label>
-                                            <input type="text" class="form-control" id="namecat" name="name" required="" placeholder="Tên sản phẩm...">
+                                            <label>Tên danh mục</label>
+                                            <input type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <label class="btn btn-outline-success waves-effect waves-light m-r-10">
-                                            <input type="radio" name="stt" id="stt1" value="1">
+                                            <input type="radio" name="stt" id="stt1" value="1" checked>
                                             Hiện
                                     </label>
                                         <label class="btn btn-outline-danger waves-effect waves-light">
@@ -72,8 +72,8 @@
                                     </label>
                                         <div class="form-group">
                                             <div>
-                                                <button type="submit" class="btn btn-primary waves-effect waves-light btn-update">
-                                            Cập nhật
+                                                <button type="submit" class="btn btn-primary waves-effect waves-light btn-category">
+                                            Thêm
                                             </button>
                                                 <a href="">
                                                     <button type="reset" class="btn btn-secondary waves-effect m-l-5">
@@ -82,64 +82,63 @@
                                                 </a>
                                             </div>
                                         </div>
-                                        </d>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Page content Wrapper -->
-
                 </div>
-                <!-- content -->
-
-                <footer class="footer">
-                    © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-                </footer>
+                <!-- Page content Wrapper -->
 
             </div>
-            <!-- End Right content here -->
+            <!-- content -->
+
+            <footer class="footer">
+                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
+            </footer>
 
         </div>
-        <!-- END wrapper -->
+        <!-- End Right content here -->
+
+    </div>
+    <!-- END wrapper -->
 
 
-        <!-- jQuery  -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/modernizr.min.js"></script>
-        <script src="assets/js/detect.js"></script>
-        <script src="assets/js/fastclick.js"></script>
-        <script src="assets/js/jquery.slimscroll.js"></script>
-        <script src="assets/js/jquery.blockUI.js"></script>
-        <script src="assets/js/waves.js"></script>
-        <script src="assets/js/jquery.nicescroll.js"></script>
-        <script src="assets/js/jquery.scrollTo.min.js"></script>
+    <!-- jQuery  -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/modernizr.min.js"></script>
+    <script src="assets/js/detect.js"></script>
+    <script src="assets/js/fastclick.js"></script>
+    <script src="assets/js/jquery.slimscroll.js"></script>
+    <script src="assets/js/jquery.blockUI.js"></script>
+    <script src="assets/js/waves.js"></script>
+    <script src="assets/js/jquery.nicescroll.js"></script>
+    <script src="assets/js/jquery.scrollTo.min.js"></script>
 
-        <!-- skycons -->
-        <script src="assets/plugins/skycons/skycons.min.js"></script>
+    <!-- skycons -->
+    <script src="assets/plugins/skycons/skycons.min.js"></script>
 
-        <!-- skycons -->
-        <script src="assets/plugins/peity/jquery.peity.min.js"></script>
+    <!-- skycons -->
+    <script src="assets/plugins/peity/jquery.peity.min.js"></script>
 
-        <!--Morris Chart-->
-        <script src="assets/plugins/morris/morris.min.js"></script>
-        <script src="assets/plugins/raphael/raphael-min.js"></script>
+    <!--Morris Chart-->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-        <!-- dashboard -->
-        <script src="assets/pages/dashboard.js"></script>
+    <script src="assets/plugins/morris/morris.min.js"></script>
+    <script src="assets/plugins/raphael/raphael-min.js"></script>
 
-        <!-- App js -->
+    <!-- dashboard -->
+    <script src="assets/pages/dashboard.js"></script>
 
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="assets/component/left-side.js"></script>
-        <script src="assets/component/topbar.js"></script>
-        <script src="assets/js/app.js"></script>
-        <script src="assets/js/main.js"></script>
-        <script src="assets/javascript/category.js"></script>
+    <!-- App js -->
+    <script src="assets/component/left-side.js"></script>
+    <script src="assets/component/topbar.js"></script>
+    <script src="assets/javascript/category.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/main.js"></script>
 
-        <script>
-        </script>
+
 </body>
 
 </html>
