--- a/admin/login.html
+++ b/admin/login.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Admin SilkRoad</title>
+    <title>Login</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="ThemeDesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="shortcut icon" href="../img/favicon/Silkroad.png">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
     <style>
         .error-msg {
             color: red;
