--- a/admin/pages/order/order.html
+++ b/admin/pages/order/order.html
@@ -44,21 +44,45 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
-                        <div class="col-md-6 grid-margin stretch-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="card-title">Thêm danh mục tổng</h4>
-                                    <form class="forms-sample">
-                                        <div class="form-group">
-                                            <label for="exampleInputUsername1">Tên danh mục tổng</label>
-                                            <input type="text" class="form-control" id="ten"
-                                                placeholder="Tên danh mục">
-                                        </div>
-                                        <button id="btnluu" type="submit" class="btn btn-primary sua me-2">Submit</button>
-                                        <button class="btn btn-danger xoa ">Cancel</button>
-                                    </form>
-                                </div>
-                            </div>
+                        <h4 class="card-title">Danh sách đơn hàng</h4>
+                        <div class="table-responsive pt-3">
+                            <table class="table table-bordered product">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>ID khách hàng</th>
+                                        <th>ID khuyến mãi</th>
+                                        <th>Tên khách hàng</th>
+                                        <th>Email</th>
+                                        <th>Ngày đặt</th>
+                                        <th>Địa chỉ</th>
+                                        <th>Điện thoại</th>
+                                        <th>Phương thức thanh toán</th>
+                                        <th>Ghi chú khách hàng</th>
+                                        <th>Ghi chú Admin</th>
+                                        <th>Trạng thái</th>
+                                        <th>Hành động</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="dh">
+                                    <!-- <tr>
+                                        <td>1</td>
+                                        <td>2</td>
+                                        <td>3</td>
+                                        <td>Sú</td>
+                                        <td>khô gà</td>
+                                        <td>12/12/2022</td>
+                                        <td>landmark81</td>
+                                        <td>0123456789</td>
+                                        <td>không có gì</td>
+                                        <td> <label class="badge badge-warning">đang giao</label> </td>
+                                        <td>
+                                            <button class="badge badge-primary sua button">Sửa</button>
+                                            <button class="badge badge-danger xoa button">Xóa</button>
+                                        </td>
+                                    </tr> -->
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -86,7 +110,7 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-  <!-- endinject -->
+    <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
@@ -94,9 +118,7 @@
     <!-- End custom js for this page-->
     <script src="../../component/nav2.js"></script>
     <script src="../../component/navbar2.js"></script>
-    <script src="../js/dmtong.js"></script>
+    <Script src="../js/orders.js"></Script>
 </body>
 
 </html>
-
-
