--- a/admin/pages/product/product.html
+++ b/admin/pages/product/product.html
@@ -44,21 +44,43 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
-                        <div class="col-md-6 grid-margin stretch-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="card-title">Thêm danh mục tổng</h4>
-                                    <form class="forms-sample">
-                                        <div class="form-group">
-                                            <label for="exampleInputUsername1">Tên danh mục tổng</label>
-                                            <input type="text" class="form-control" id="ten"
-                                                placeholder="Tên danh mục">
-                                        </div>
-                                        <button id="btnluu" type="submit" class="btn btn-primary sua me-2">Submit</button>
-                                        <button class="btn btn-danger xoa ">Cancel</button>
-                                    </form>
-                                </div>
-                            </div>
+                        <h4 class="card-title">Danh sách sản phẩm</h4>
+                        <div class="table-responsive pt-3">
+                            <table class="table table-bordered product">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Tên</th>
+                                        <th>Hình</th>
+                                        <th>Giá</th>
+                                        <th>Giảm giá</th>
+                                        <th>Ngày nhập</th>
+                                        <th>Số lượng</th>
+                                        <th>Mô tả</th>
+                                        <th>Lượt xem</th>
+                                        <th>Trạng thái</th>
+                                        <th>Hành động</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="sp">
+                                    <!-- <tr>
+                                        <td>1</td>
+                                        <td>Herman Beck</td>
+                                        <td class="img"><img src="../../../img/5.png" alt=""></td>
+                                        <td>30.000VNĐ</td>
+                                        <td class="text-danger"> 10% <i class="ti-arrow-down"></i></td>
+                                        <td>2/3/2004</td>
+                                        <td>10</td>
+                                        <td>Herman BeckHerman BeckHerman BeckHerman Beck</td>
+                                        <td>10 lượt</td>
+                                        <td> <label class="badge badge-warning">Còn hàng</label> </td>
+                                        <td>
+                                            <button class="badge badge-primary sua button">Sửa</button>
+                                            <button class="badge badge-danger xoa button">Xóa</button>
+                                        </td>
+                                    </tr> -->
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -86,7 +108,7 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-  <!-- endinject -->
+    <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
@@ -94,9 +116,7 @@
     <!-- End custom js for this page-->
     <script src="../../component/nav2.js"></script>
     <script src="../../component/navbar2.js"></script>
-    <script src="../js/dmtong.js"></script>
+    <Script src="../js/products.js"></Script>
 </body>
 
 </html>
-
-
