--- a/admin/pages/user/themuser.html
+++ b/admin/pages/user/themuser.html
@@ -47,10 +47,10 @@
                         <div class="col-md-6 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title">Thêm danh mục tổng</h4>
+                                    <h4 class="card-title">Thêm danh mục</h4>
                                     <form class="forms-sample">
                                         <div class="form-group">
-                                            <label for="exampleInputUsername1">Tên danh mục tổng</label>
+                                            <label for="exampleInputUsername1">Tên danh mục</label>
                                             <input type="text" class="form-control" id="ten"
                                                 placeholder="Tên danh mục">
                                         </div>
@@ -86,7 +86,7 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-  <!-- endinject -->
+    <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
@@ -94,7 +94,7 @@
     <!-- End custom js for this page-->
     <script src="../../component/nav2.js"></script>
     <script src="../../component/navbar2.js"></script>
-    <script src="../js/dmtong.js"></script>
+    <script src="../js/brands.js"></script>
 </body>
 
 </html>
