--- a/admin/pages/user/user.html
+++ b/admin/pages/user/user.html
@@ -30,7 +30,7 @@
         <!-- partial:partials/_navbar.html -->
         <!-- nav ngnag -->
         <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row" id="navbar">
-
+            
         </nav>
 
         <div class="container-fluid page-body-wrapper">
@@ -44,21 +44,42 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
-                        <div class="col-md-6 grid-margin stretch-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="card-title">Thêm danh mục tổng</h4>
-                                    <form class="forms-sample">
-                                        <div class="form-group">
-                                            <label for="exampleInputUsername1">Tên danh mục tổng</label>
-                                            <input type="text" class="form-control" id="ten"
-                                                placeholder="Tên danh mục">
-                                        </div>
-                                        <button id="btnluu" type="submit" class="btn btn-primary sua me-2">Submit</button>
-                                        <button class="btn btn-danger xoa ">Cancel</button>
-                                    </form>
-                                </div>
-                            </div>
+                        <h4 class="card-title">Danh sách tài khoản</h4>
+                        <div class="table-responsive pt-3">
+                            <table class="table table-bordered product">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Tên khách hàng</th>
+                                        <th>Hình ảnh</th>
+                                        <th>Email</th>
+                                        <th>Mật khẩu</th>
+                                        <th>Số điện thoại</th>
+                                        <th class="des">Địa chỉ</th>
+                                        <th>Vai trò</th>
+                                        <!-- <th>Trạng thái</th> -->
+                                        <th>Hành động</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="kh">
+                                    <!-- <tr>
+                                        <td>1</td>
+                                        <td class="img"><img src="../../../img/5.png" alt=""></td>
+                                        <td>Sú </td>
+                                        <td>sutoan</td>
+                                        <td>123456789</td>
+                                        <td>toan@gmail.com</td>
+                                        <td>0987652310</td>
+                                        <td class="des">landmark81 landmark81 landmark81 tầng cao nhất</td>
+                                        <td>Admin</td>
+                                        <td> <label class="badge badge-warning">Hoạt động</label> </td>
+                                        <td>
+                                            <button class="badge badge-primary sua button">Sửa</button>
+                                            <button class="badge badge-danger xoa button">Xóa</button>
+                                        </td>
+                                    </tr> -->
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -86,7 +107,7 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-  <!-- endinject -->
+    <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../../js/dashboard.js"></script>
@@ -94,9 +115,7 @@
     <!-- End custom js for this page-->
     <script src="../../component/nav2.js"></script>
     <script src="../../component/navbar2.js"></script>
-    <script src="../js/dmtong.js"></script>
+    <script src="../js/users.js"></script>
 </body>
 
 </html>
-
-
