--- a/admin/product.html
+++ b/admin/product.html
@@ -5,17 +5,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Admin - JS</title>
+    <title>Admin SilkRoad</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="ThemeDesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon/Silkroad.png">
     <!--Morris Chart CSS -->
     <link rel="stylesheet" href="assets/plugins/morris/morris.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -64,14 +65,14 @@
                                                 <thead>
                                                     <tr>
                                                         <th>#</th>
-                                                        <th>Tên</th>
-                                                        <th>Ảnh</th>
+                                                        <th style="width: 100px;">Tên</th>
+                                                        <th style="width: 100px;">Ảnh</th>
                                                         <th>Giá</th>
                                                         <th>Giảm giá</th>
                                                         <th>Ngày nhập</th>
                                                         <th>Số lượng</th>
                                                         <th>Trạng thái</th>
-                                                        <th>Action</th>
+                                                        <th style="width: 140px;">Action</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody class="renderProduct" id="sp">
@@ -95,11 +96,6 @@
 
             </div>
             <!-- content -->
-
-            <footer class="footer">
-                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-            </footer>
-
         </div>
         <!-- End Right content here -->
 
