--- a/admin/login.html
+++ b/admin/login.html
@@ -111,6 +111,7 @@
         <script src="assets/js/jquery.scrollTo.min.js"></script>
 
         <!-- App js -->
+    <script src="../js/toastr.min.js"></script>
         <script src="assets/js/app.js"></script>
         <script src="assets/javascript/auth.js" type="module"></script>
 
