--- a/admin/register.html
+++ b/admin/register.html
@@ -43,7 +43,8 @@
                                 <div class="card-body">
 
                                     <h3 class="text-center mt-0 m-b-15">
-                                        <a href="index.html" class="logo logo-admin"><img src="assets/images/logo-dark.png" height="30" alt="logo"></a>
+                                        <a href="index.html" class="logo logo-admin"><img
+                                                src="assets/images/logo-dark.png" height="30" alt="logo"></a>
                                     </h3>
 
                                     <h4 class="text-muted text-center font-18"><b>Đăng ký</b></h4>
@@ -52,30 +53,35 @@
                                     <div class="p-3">
                                         <div class="form-group row">
                                             <div class="col-12">
-                                                <input class="form-control" type="text" id="fullname" name="fullname" placeholder="Họ và tên...">
+                                                <input class="form-control" type="text" id="fullname" name="fullname"
+                                                    placeholder="Họ và tên...">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <div class="col-12">
-                                                <input class="form-control" type="text" id="username" name="username" placeholder="Tên tài khoản...">
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group row">
-                                            <div class="col-12">
-                                                <input class="form-control" type="email" id="email" name="email" placeholder="Địa chỉ Email...">
+                                                <input class="form-control" type="text" id="username" name="username"
+                                                    placeholder="Tên tài khoản...">
                                             </div>
                                         </div>
 
                                         <div class="form-group row">
                                             <div class="col-12">
-                                                <input class="form-control" type="password" id="password" name="password" placeholder="Mật khẩu...">
+                                                <input class="form-control" type="email" id="email" name="email"
+                                                    placeholder="Địa chỉ Email...">
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <div class="col-12">
+                                                <input class="form-control" type="password" id="password"
+                                                    name="password" placeholder="Mật khẩu...">
                                             </div>
                                         </div>
 
                                         <div class="form-group text-center row m-t-20">
                                             <div class="col-12">
-                                                <button class="btn btn-primary btn-block waves-effect waves-light" id="btnRegister" type="submit">Đăng ký</button>
+                                                <button class="btn btn-primary btn-block waves-effect waves-light"
+                                                    id="btnRegister" type="submit">Đăng ký</button>
                                             </div>
                                         </div>
 
@@ -108,6 +114,7 @@
         <script src="assets/js/jquery.scrollTo.min.js"></script>
 
         <!-- App js -->
+        <script src="../js/toastr.min.js"></script>
         <script src="assets/js/app.js"></script>
         <script src="assets/javascript/auth.js" type="module"></script>
 
