--- a/admin/thongBao.html
+++ b/admin/thongBao.html
@@ -90,11 +90,6 @@
 
             </div>
             <!-- content -->
-
-            <footer class="footer">
-                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-            </footer>
-
         </div>
         <!-- End Right content here -->
 
@@ -129,6 +124,7 @@
     <script src="assets/pages/dashboard.js"></script>
 
     <!-- App js -->
+    <script src="../js/toastr.min.js"></script>
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
