--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -16,6 +16,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -34,7 +35,7 @@
 
         <!-- ========== Left Sidebar Start ========== -->
         <div class="left side-menu" id="leftSibar">
-            
+
         </div>
         <!-- Left Sidebar End -->
 
@@ -59,31 +60,33 @@
                                         <div class="form-group">
                                             <label>Tên danh mục tổng</label>
                                             <select name="category" id="category" class="form-control">
-                                                
+
 
                                             </select>
                                         </div>
                                         <div class="form-group">
                                             <label>Tên danh mục</label>
-                                            <input type="text" class="form-control" name="name" required="" placeholder="Tên danh mục...">
+                                            <input type="text" class="form-control" name="name" required=""
+                                                placeholder="Tên danh mục...">
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <label class="btn btn-outline-success waves-effect waves-light m-r-10">
                                             <input type="radio" name="stt" id="stt1" value="1" checked>
                                             Hiện
-                                    </label>
+                                        </label>
                                         <label class="btn btn-outline-danger waves-effect waves-light">
                                             <input type="radio" name="stt" id="stt2" value="0">
                                             Ẩn
-                                    </label>
+                                        </label>
                                         <div class="form-group">
                                             <div>
-                                                <button type="submit" class="btn btn-primary waves-effect waves-light btn-category">
-                                            Thêm
-                                            </button>
+                                                <button type="submit"
+                                                    class="btn btn-primary waves-effect waves-light btn-category">
+                                                    Thêm
+                                                </button>
                                                 <a href="">
                                                     <button type="reset" class="btn btn-secondary waves-effect m-l-5">
-                                                Cancel
+                                                        Cancel
                                                     </button>
                                                 </a>
                                             </div>
@@ -98,11 +101,6 @@
 
             </div>
             <!-- content -->
-
-            <footer class="footer">
-                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-            </footer>
-
         </div>
         <!-- End Right content here -->
 
@@ -138,6 +136,7 @@
     <script src="assets/pages/dashboard.js"></script>
 
     <!-- App js -->
+    <script src="../js/toastr.min.js"></script>
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
     <script src="assets/javascript/category.js"></script>
