--- a/admin/dmTong.html
+++ b/admin/dmTong.html
@@ -16,6 +16,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -102,10 +103,6 @@
             </div>
             <!-- content -->
 
-            <footer class="footer">
-                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-            </footer>
-
         </div>
         <!-- End Right content here -->
 
@@ -140,6 +137,7 @@
     <script src="assets/pages/dashboard.js"></script>
 
     <!-- App js -->
+    <script src="../js/toastr.min.js"></script>
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
