--- a/admin/member.html
+++ b/admin/member.html
@@ -16,6 +16,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -66,7 +67,7 @@
                                                         <th>#</th>
                                                         <th>Tên người dùng</th>
                                                         <th>Mật khẩu</th>
-                                                        <th>Hình ảnh</th>
+                                                        <th style="width: 100px !important;">Hình ảnh</th>
                                                         <th>Địa chỉ</th>
                                                         <th>Email</th>
                                                         <th>SĐT</th>
@@ -94,10 +95,6 @@
 
             </div>
             <!-- content -->
-
-            <footer class="footer">
-                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-            </footer>
 
         </div>
         <!-- End Right content here -->
@@ -133,11 +130,11 @@
     <script src="assets/pages/dashboard.js"></script>
 
     <!-- App js -->
+    <script src="../js/toastr.min.js"></script>
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/product.js"></script>
     <script src="assets/javascript/users.js"></script>
 
 
