--- a/admin/product.html
+++ b/admin/product.html
@@ -66,7 +66,7 @@
                                                     <tr>
                                                         <th>#</th>
                                                         <th style="width: 100px;">Tên</th>
-                                                        <th style="width: 100px;">Ảnh</th>
+                                                        <th style="width: 100px !important;">Ảnh</th>
                                                         <th>Giá</th>
                                                         <th>Giảm giá</th>
                                                         <th>Ngày nhập</th>
@@ -128,6 +128,7 @@
     <!-- <script src="assets/pages/dashboard.js"></script> -->
 
     <!-- App js -->
+    <script src="../js/toastr.min.js"></script>
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
