--- a/admin/update-category.html
+++ b/admin/update-category.html
@@ -16,6 +16,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -92,11 +93,6 @@
 
                 </div>
                 <!-- content -->
-
-                <footer class="footer">
-                    © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-                </footer>
-
             </div>
             <!-- End Right content here -->
 
@@ -130,16 +126,13 @@
         <script src="assets/pages/dashboard.js"></script>
 
         <!-- App js -->
-
+        <script src="../js/toastr.min.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="assets/component/left-side.js"></script>
         <script src="assets/component/topbar.js"></script>
         <script src="assets/js/app.js"></script>
         <script src="assets/js/main.js"></script>
         <script src="assets/javascript/category.js"></script>
-
-        <script>
-        </script>
 </body>
 
 </html>
