--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -58,7 +58,7 @@
                                     <div class="form">
                                         <div class="form-group">
                                             <label>Tên danh mục tổng</label>
-                                            <select name="category" id="category" class="form-control">
+                                            <select name="category" id="idloai" class="form-control">
                                                 
 
                                             </select>
@@ -78,7 +78,7 @@
                                     </label>
                                         <div class="form-group">
                                             <div>
-                                                <button type="submit" class="btn btn-primary waves-effect waves-light btn-category">
+                                                <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-category">
                                             Thêm
                                             </button>
                                                 <a href="">
