--- a/admin/thongBao.html
+++ b/admin/thongBao.html
@@ -58,15 +58,15 @@
                                 <div class="card m-b-30">
                                     <div class="card-body">
                                         <h4 class="mt-0 header-title">Thông báo</h4>
-                                        <a href="add-product.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm thông báo +</a>
+                                        <a href="add-thongBao.html" class="btn btn-primary waves-effect waves-light m-b-10">Thêm thông báo +</a>
                                         <div class="table-responsive">
                                             <table class="table mb-0">
                                                 <thead>
                                                     <tr>
                                                         <th>#</th>
-                                                        <th>ID thông báo</th>
-                                                        <th>Ngày TB</th>
-                                                        <th>Trạng thái</th>
+                                                        <th>Khuyến mãi</th>
+                                                        <th>Ngày đăng</th>
+                                                        <th>Hình ảnh</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
