--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -66,7 +66,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Tên danh mục</label>
-                                            <input type="text" class="form-control" name="name" required=""
+                                            <input id="ten" type="text" class="form-control" name="name" required=""
                                                 placeholder="Tên danh mục...">
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
@@ -80,7 +80,7 @@
                                         </label>
                                         <div class="form-group">
                                             <div>
-                                                <button type="submit"
+                                                <button id="btnluu" type="submit"
                                                     class="btn btn-primary waves-effect waves-light btn-category">
                                                     Thêm
                                                 </button>
@@ -142,6 +142,7 @@
     <script src="assets/javascript/category.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
+    
 
 
 </body>
