--- a/admin/add-dmtong.html
+++ b/admin/add-dmtong.html
@@ -60,7 +60,7 @@
                                     <div class="form">
                                         <div class="form-group">
                                             <label>Tên danh mục</label>
-                                            <input type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
+                                            <input id="ten" type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <label class="btn btn-outline-success waves-effect waves-light m-r-10">
@@ -73,7 +73,7 @@
                                     </label>
                                         <div class="form-group">
                                             <div>
-                                                <button type="submit" class="btn btn-primary waves-effect waves-light btn-category">
+                                                <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-category">
                                             Thêm
                                             </button>
                                                 <a href="">
@@ -134,7 +134,7 @@
     <script src="assets/javascript/category.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <script src="pages/js/themloai.js"></script>
 
 </body>
 
