--- a/login.html
+++ b/login.html
@@ -80,12 +80,12 @@
 					<form>
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form1Example13">Email</label>
-							<input type="email" id="form1Example13" class="form-control form-control-lg"placeholder="Nhập email" />
+							<input type="email" id="email" class="form-control form-control-lg"placeholder="Nhập email" />
 						</div>
 
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form1Example23">Mật khẩu</label>
-							<input type="password" id="form1Example23" class="form-control form-control-lg" placeholder="Nhập mật khẩu" />
+							<input type="password" id="password" class="form-control form-control-lg" placeholder="Nhập mật khẩu" />
 						</div>
 
 						<div class="d-flex justify-content-around align-items-center mb-4">
@@ -95,8 +95,10 @@
 							</div>
 							<a href="#!">Quên mật khẩu ?</a>
 						</div>
-
-						<button type="submit" class="btn btn-primary btn-lg btn-block">Đăng nhập</button>
+						<div class="form-group">
+							<p id="erros"></p>
+						</div>
+						<button id="login" class="btn btn-primary btn-lg btn-block">Đăng nhập</button>
 
 						<div class="divider d-flex align-items-center my-4">
 							<p>Bạn không có tài khoản 
@@ -132,9 +134,12 @@
 	<script src="js/mixitup.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="./js/toastr.min.js"></script>
+
 
 	<!-- JS -->
 	<script src="js/footAndHead.js"></script>
+	<script src="js/user/dangnhap.js" defer type="module"></script>
 
 
 </body>
