--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -59,7 +59,7 @@
                                     <div class="form">
                                         <div class="form-group">
                                             <label>Tên danh mục tổng</label>
-                                            <select name="category" id="idloai" class="form-control">
+                                            <select name="category" id="dmt" class="form-control">
                                                 
 
                                             </select>
@@ -71,13 +71,13 @@
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <label class="btn btn-outline-success waves-effect waves-light m-r-10">
-                                            <input type="radio" name="stt" id="stt1" value="1" checked>
+                                            <input type="radio"  id="anHien" name="anHien" class="anHien" value="1" checked>
                                             Hiện
-                                        </label>
+                                    </label>
                                         <label class="btn btn-outline-danger waves-effect waves-light">
-                                            <input type="radio" name="stt" id="stt2" value="0">
+                                            <input type="radio"  id="anHien" name="anHien" class="anHien" value="0">
                                             Ẩn
-                                        </label>
+                                    </label>
                                         <div class="form-group">
                                             <div>
                                                 <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-category">
@@ -141,6 +141,7 @@
     <script src="assets/javascript/category.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/javascript/themdm.js"></script>
     
 
 
