--- a/admin/suadanhmuc.html
+++ b/admin/suadanhmuc.html
@@ -27,7 +27,6 @@
     <div id="preloader">
         <div id="status">
             <div class="spinner"></div>
-            <div></div>
         </div>
     </div>
 
@@ -56,25 +55,21 @@
                         <div class="col-lg-12">
                             <div class="card m-b-30">
                                 <div class="card-body">
-                                    <h4 class="mt-0 header-title">Danh mục tổng</h4>
+
+                                    <h4 class="mt-0 header-title">Sửa sản phẩm</h4>
                                     <div class="form">
                                         <div class="form-group">
-                                            <label>Tên danh mục</label>
+                                            <label>Tên sản phẩm</label>
                                             <input id="ten" type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
-                                        <label class="btn btn-outline-success waves-effect waves-light m-r-10">
-                                            <input type="radio"  id="anHien" name="anHien" class="anHien" value="1" checked>
-                                            Hiện
-                                    </label>
-                                        <label class="btn btn-outline-danger waves-effect waves-light">
-                                            <input type="radio"  id="anHien" name="anHien" class="anHien" value="0">
-                                            Ẩn
-                                    </label>
+                                            <div id="div_anHien">
+                                                
+                                            </div>
                                         <div class="form-group">
                                             <div>
-                                                <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-category">
-                                            Thêm
+                                                <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-update">
+                                            Cập nhật
                                             </button>
                                                 <a href="">
                                                     <button type="reset" class="btn btn-secondary waves-effect m-l-5">
@@ -83,59 +78,57 @@
                                                 </a>
                                             </div>
                                         </div>
+                                        </d>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!-- Page content Wrapper -->
+
                 </div>
-                <!-- Page content Wrapper -->
-
+                <!-- content -->
             </div>
-            <!-- content -->
+            <!-- End Right content here -->
+
         </div>
-        <!-- End Right content here -->
-
-    </div>
-    <!-- END wrapper -->
+        <!-- END wrapper -->
 
 
-    <!-- jQuery  -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/modernizr.min.js"></script>
-    <script src="assets/js/detect.js"></script>
-    <script src="assets/js/fastclick.js"></script>
-    <script src="assets/js/jquery.slimscroll.js"></script>
-    <script src="assets/js/jquery.blockUI.js"></script>
-    <script src="assets/js/waves.js"></script>
-    <script src="assets/js/jquery.nicescroll.js"></script>
-    <script src="assets/js/jquery.scrollTo.min.js"></script>
+        <!-- jQuery  -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/modernizr.min.js"></script>
+        <script src="assets/js/detect.js"></script>
+        <script src="assets/js/fastclick.js"></script>
+        <script src="assets/js/jquery.slimscroll.js"></script>
+        <script src="assets/js/jquery.blockUI.js"></script>
+        <script src="assets/js/waves.js"></script>
+        <script src="assets/js/jquery.nicescroll.js"></script>
+        <script src="assets/js/jquery.scrollTo.min.js"></script>
 
-    <!-- skycons -->
-    <script src="assets/plugins/skycons/skycons.min.js"></script>
+        <!-- skycons -->
+        <script src="assets/plugins/skycons/skycons.min.js"></script>
 
-    <!-- skycons -->
-    <script src="assets/plugins/peity/jquery.peity.min.js"></script>
+        <!-- skycons -->
+        <script src="assets/plugins/peity/jquery.peity.min.js"></script>
 
-    <!--Morris Chart-->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!--Morris Chart-->
+        <script src="assets/plugins/morris/morris.min.js"></script>
+        <script src="assets/plugins/raphael/raphael-min.js"></script>
 
-    <script src="assets/plugins/morris/morris.min.js"></script>
-    <script src="assets/plugins/raphael/raphael-min.js"></script>
+        <!-- dashboard -->
+        <script src="assets/pages/dashboard.js"></script>
 
-    <!-- dashboard -->
-    <script src="assets/pages/dashboard.js"></script>
-
-    <!-- App js -->
-    <script src="../js/toastr.min.js"></script>
-    <script src="assets/component/left-side.js"></script>
-    <script src="assets/component/topbar.js"></script>
-    <script src="assets/javascript/category.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/javascript/themloai.js"></script>
-
+        <!-- App js -->
+        <script src="../js/toastr.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="assets/component/left-side.js"></script>
+        <script src="assets/component/topbar.js"></script>
+        <script src="assets/js/app.js"></script>
+        <script src="assets/js/main.js"></script>
+     
+        <script src="assets/javascript/suadanhmuc.js"></script>
 </body>
 
 </html>
