--- a/admin/product.html
+++ b/admin/product.html
@@ -80,6 +80,7 @@
                                                     
                                                 </tbody>
                                             </table>
+                                            <Div id="page"></Div>
                                         </div>
 
                                     </div>
