--- a/admin/thongBao.html
+++ b/admin/thongBao.html
@@ -67,6 +67,7 @@
                                                         <th>Khuyến mãi</th>
                                                         <th>Ngày đăng</th>
                                                         <th>Hình ảnh</th>
+                                                        <Th>Trạng thái</Th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
