--- a/admin/update-donhang.html
+++ b/admin/update-donhang.html
@@ -76,32 +76,27 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Số điện thoại</label>
-                                            <input type="text" class="form-control" id="sdt" name="name" required="" >
+                                            <input type="number" class="form-control" id="sdt" name="name" required="" >
                                         </div>
                                         <div class="form-group">
-                                            <label>Tên sản phẩm</label>
-                                            <input type="text" class="form-control" id="tenSP" name="name" required="" >
+                                            <label>Ghi chú của khách hàng</label> <br>
+                                            <input type="text" class="form-control" id="ghiChuKH" name="name" required="" >
                                         </div>
                                         <div class="form-group">
-                                            <label>Hình ảnh</label>
-                                            <input type="text" class="form-control" id="hinhAnh" name="name" required="" >
+                                            <label>Ghi chú Admin</label>
+                                            <input type="text" class="form-control" id="ghiChuAdmin" name="name" required="" >
                                         </div>
                                         <div class="form-group">
-                                            <label>Đơn giá</label>
-                                            <input type="text" class="form-control" id="donGia" name="name" required="" >
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Số lượng</label>
-                                            <input type="text" class="form-control" id="soLuong" name="name" required="" >
+                                            <label>Phương thức thanh toán</label>
+                                            <input type="text" class="form-control" id="phuongThucTT" name="name" required="" >
                                         </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <div class="form-group">
-                                            <select  class="form-group" >
-                                                <option>Chờ xác nhận</option>
-                                                <option>Xác nhận</option>
-                                                <option>Đang giao</option>
-                                                <option>Đã giao</option>
-                                                <option>Hủy</option>
+                                            <select id="trangThaiDH"  class="anHien form-group" >
+                                                <option value="Chờ xác nhận">Chờ xác nhận</option>
+                                                <option value="Đang giap">Đang giao</option>
+                                                <option value="Đã giao">Đã giao</option>
+                                                <option value="Huỷ">Hủy</option>
                                             </select>
                                             
                                         </div>
