--- a/admin/category.html
+++ b/admin/category.html
@@ -86,6 +86,7 @@
                                                     </tr> -->
                                                 </tbody>
                                             </table>
+                                            <Div id="page"></Div>
                                         </div>
 
                                     </div>
