--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -23,6 +23,7 @@
     <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
+    <link rel="stylesheet" href="css/toastr.min.css">
 </head>
 
 
@@ -139,6 +140,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/toastr.min.js"></script>
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
     <Script src="./js/giohang/giohang.js"></Script>
