--- a/resigter.html
+++ b/resigter.html
@@ -23,6 +23,8 @@
     <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
+    <link rel="stylesheet" href="css/toastr.min.css" type="text/css">
+
 </head>
 
 
@@ -134,7 +136,6 @@
 
 	<!-- Js Plugins -->
 	<script src="js/jquery-3.3.1.min.js"></script>
-	<script src="./js/toastr.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.nice-select.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
@@ -144,6 +145,7 @@
 	<script src="js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="./js/toastr.min.js"></script>
 
 
 	<!-- JS -->
