--- a/checkout.html
+++ b/checkout.html
@@ -89,7 +89,8 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="checkout__input">
-                                        <input id="" type="hidden" placeholder="Nhập họ và tên">
+                                        <input id="idKH" type="text" placeholder="idKH">
+                                        <input id="idKM" type="text" placeholder="idKM">
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +133,12 @@
 
                                 <div style="display:none" class="checkout__order__subtotal">Subtotal <span id="tongtien"></span></div>
                                 <div class="checkout__order__total" >
-                                    Total 
+                                    Giảm giá 
+                                    <span id="giamgia"></span>
+                                </div>
+                                <div class="checkout__order__total" >
+                                    
+                                    Tổng tiền  
                                     <span id="tientong"></span>
                                 </div>
                                 <p>
