--- a/userdetail.html
+++ b/userdetail.html
@@ -62,115 +62,8 @@
   </section>
 
   <section style="margin-top: 50px;">
-    <div class="container py-5">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card mb-4">
-            <div class="card-body text-center">
-              <img src="https://cf.shopee.vn/file/41beb461c8ddb4a43ce62bb119f3b642" alt="avatar"
-                class="rounded-circle img-fluid" style="width: 150px;">
-              <h5 class="my-3">Nguyễn Hoàng Triệu</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-8">
-          <div class="card mb-4">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Họ và Tên</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">Nguyễn Hoàng Triệu</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Mật khẩu</p>
-                </div>
-                <div class="col-sm-6">
-                  <p class="text-muted mb-0">123123123</p>
-                </div>
-                <div class="col-sm-3">
-                  <button class="btn btn-secondary secondary" type="button" id="change_password">Đổi mật khẩu</button>
-                </div>
-              </div>
-              <div class="row change_password" id="change">
-                <form class="forms-sample">
-                  <div class="form-group">
-                      <label for="exampleInputUsername1">Mật khẩu cũ</label>
-                      <input type="password" class="form-control" placeholder="Mật khẩu cũ">
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputUsername1">Mật khẩu mới</label>
-                    <input type="password" class="form-control" placeholder="Mật khẩu mới">
-                </div>
-                  <button type="submit" class="btn btn-primary sua me-2">Thay đổi</button>
-                  <button class="btn btn-danger xoa ">Hủy</button>
-              </form>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Email</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">trieu@gmail.com</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Số điện thoại</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">(098) 765-4321</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Địa chỉ</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">123 Thiên Đàng, Thượng Giới</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row order_detail">
-            <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>ID đơn hàng</th>
-                  <th>Số lượng</th>
-                  <th>Giá</th>
-                  <th>Trạng thái</th>
-                  <th>Chi tiết</th>
-                  <th>Hành động</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>232112</td>
-                  <td>1</td>
-                  <td>39.000 VNĐ</td>
-                  <td>Đang giao</td>
-                  <td>
-                    <button type="button" class="btn btn-primary primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"> Chi tiết </button>
-                  </td>
-                  <td>
-                    <button type="button" class="btn btn-danger danger"> Hủy đơn </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
+    <div class="container py-5" id="khachHang">
+
     </div>
   </section>
 
@@ -193,21 +86,9 @@
               <th>Giá</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Món khô</td>
-              <td><img src="./img/product-1.jpg" alt=""></td>
-              <td>1</td>
-              <td>39.000 VNĐ</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Món nước</td>
-              <td><img src="./img/product-2.jpg" alt=""></td>
-              <td>1</td>
-              <td>39.000 VNĐ</td>
-            </tr>
+          <tbody id="ct">
+            
+            
           </tbody>
         </table>
       </div>
@@ -231,9 +112,9 @@
     const btn = document.getElementById('change_password');
 const action = document.getElementById('change');
 
-btn.onclick = function () {
-    action.style.display = "block";
-}
+// btn.onclick = function () {
+//     action.style.display = "block";
+// }
 
   </script>
 
@@ -248,6 +129,7 @@ btn.onclick = function () {
 
   <!-- JS -->
   <script src="./js/footAndHead.js"></script>
+  <Script src="js/user/nguoidung.js"></Script>
 
 </body>
 
