--- a/shop-grid-2.html
+++ b/shop-grid-2.html
@@ -209,7 +209,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="./js/toastr.min.js"></script>
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
     <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
