--- a/shop-grid.html
+++ b/shop-grid.html
@@ -212,6 +212,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="./js/toastr.min.js"></script>
     <!-- <script>
         function handlePageNumber(num) {
             currentPage=num  
