--- a/userdetail.html
+++ b/userdetail.html
@@ -126,6 +126,7 @@ const action = document.getElementById('change');
   <script src="js/mixitup.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="./js/toastr.min.js"></script>
 
   <!-- JS -->
   <script src="./js/footAndHead.js"></script>
