--- a/thankiu.html
+++ b/thankiu.html
@@ -86,7 +86,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="./js/toastr.min.js"></script>
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
 
