--- a/shop-details.html
+++ b/shop-details.html
@@ -280,6 +280,7 @@
     <script src="./js/sanpham/chitietsanpham.js" defer type="module"></script>
     <Script src="./js/giohang/themvaogiohang.js"></Script>
     <script src="./js/toastr.min.js"></script>
+    <script src="js/sanpham/binhluan.js"></script>
     <!-- <script>
         onclick = function addToCart(){
             let cart = document.querySelector("#addToCart");
@@ -292,3 +293,6 @@
 </body>
 
 </html>
+<script>
+
+</script>
